# awesome-claude-code-toolkit

./: .gitignore  README.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-plugin/: marketplace.json
.github/workflows/: deploy-hostinger.yml
api-log-db/: .gitignore  README.md  pyproject.toml
api-log-db/ntxp_apilog/: __init__.py  auth.py  cli.py  config.py  crypto.py  mcp_server.py  model.py  server.py
api-log-db/ntxp_apilog/dashboard/: index.html
api-log-db/ntxp_apilog/db/: __init__.py  connection.py  repository.py
api-log-db/ntxp_apilog/db/migrations/: 0001_init.sql
api-log-db/tests/: test_apilog.py  test_auth.py
archon/: streamlit_ui.py
commands/consulting/: meeting-prep.md
contacts-db/: README.md  pyproject.toml
contacts-db/data/: .gitignore
contacts-db/ntxp_contacts/: __init__.py  cli.py  config.py  mcp_server.py  model.py  normalize.py
contacts-db/ntxp_contacts/db/: connection.py  repository.py
contacts-db/ntxp_contacts/db/migrations/: 0001_init.sql  runner.py
contacts-db/ntxp_contacts/loaders/: __init__.py  _excel.py  approved_subs.py  base.py  buildingconnectd.py  cjp_pdf.py  extract_cjp.py  luncheon.py  tips.py
contacts-db/ntxp_contacts/resolve/: __init__.py  resolver.py  scorer.py
contacts-db/ntxp_contacts/sync/: __init__.py  adapters.py  base.py  engine.py
contacts-db/tests/: test_normalize.py  test_pipeline.py
contexts/: orchestration.md
contracts-db/: README.md  pyproject.toml  sample-contract-log.csv
contracts-db/data/: .gitignore
contracts-db/ntxp_contracts/: __init__.py  branding.py  cli.py  config.py  contactfile.py  importer.py  jobs.py  mcp_server.py  model.py  normalize.py
contracts-db/ntxp_contracts/db/: connection.py  repository.py
contracts-db/ntxp_contracts/db/migrations/: 0001_init.sql
contracts-db/ntxp_contracts/web/: server.py
contracts-db/ntxp_contracts/web/static/: brand.js  contract.html  contract.js  dashboard.html  dashboard.js  styles.css  util.js
contracts-db/tests/: test_contracts.py
deploy/: DEPLOY_GUIDE.md
deploy/submittal-tracker/: .htaccess  package-lock.json  package.json  server.js
docs/: joc-construction-capabilities.md
hooks/: hooks.json
hooks/scripts/: paperclip-activity-log.js  (+4 more)
mcp-configs/: mistral-ocr4.json  ntxp-apilog.json  ntxp-contacts.json  ntxp-contracts.json  paperclip.json  procurement.json  recommended.json
rules/: api-credentials.md  paperclip-integration.md
setup/: install.sh
(+142 files in other folders)
